--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
       <link rel="icon" type="image/svg+xml" href="/vite.webp" />
-    <title>BMS</title>
+    <title>BMS - 菠萝书签网</title>
   </head>
   <body style="padding: 0; margin: 0">
     <div id="app"></div>
