移动端个人中心ui重构

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     />
     <meta
       name="keywords"
-      content="免费书签管理, 在线书签, 分类书签, 快速搜索书签, 书签同步, 网页收藏夹, 网站收藏, 书签整理, 个性化书签, 网络书签服务, 菠萝书签"
+      content="免费书签管理, 在线书签, 分类书签, 快速搜索书签, 书签同步, 网页收藏夹, 网站收藏, 书签整理, 个性化书签, 网络书签服务, 智汇云书签"
     />
     <meta name="author" content="1902013368@qq.com" />
     <link rel="icon" type="image/svg+xml" href="/icon.svg" />
-    <title>PBM - 菠萝书签</title>
+    <title>智汇云书签</title>
   </head>
   <body style="padding: 0; margin: 0">
     <div id="app"></div>
