--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     />
     <meta
       name="description"
-      content="免费的网站书签管理工具，助你更高效的收纳、分享、探索优质网站。pc、移动端都可使用。"
+      content="一个免费、便捷、智能的浏览器书签在线管理平台，助你更高效的收纳、分享、探索优质网站。pc、手机、平板多端通用。"
     />
     <meta
       name="keywords"
