禁止a-select虚拟滚动导致底部选项显示不全

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     />
     <meta
       name="description"
-      content="一个免费、便捷、智能的浏览器书签在线管理平台，助你更高效的收纳、分享、探索优质网站。pc、手机、平板多端通用。"
+      content="一款免费的云端书签管理工具，实现高效收藏、便捷分享和智能探索各类优质网页。跨平台兼容，无论是PC、手机还是平板，都能畅享无缝的使用体验。"
     />
     <meta
       name="keywords"
