新增反馈历史模块

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     />
     <meta
       name="description"
-      content="一款免费的云端书签管理工具，实现高效收藏、便捷分享和智能探索各类优质网页。跨平台兼容，无论是PC、手机还是平板，都能畅享无缝的使用体验。"
+      content="轻笺是专为效率控设计的云端书签管理神器，以智能标签为核心，帮你瞬间归档网页、笔记与灵感碎片。通过动态关联的标签网络，实现书签/笔记的跨设备秒搜、多维分类与智能推荐，让知识管理像刷社交动态一样轻松有趣"
     />
     <meta
       name="keywords"
-      content="免费书签管理, 在线书签, 分类书签, 快速搜索书签, 书签同步, 网页收藏夹, 网站收藏, 书签整理, 个性化书签, 网络书签服务, 智汇云书签"
+      content="免费书签管理, 在线书签, 分类书签, 快速搜索书签, 书签同步, 网页收藏夹, 网站收藏, 书签整理, 个性化书签, 网络书签服务, 轻笺"
     />
     <meta name="author" content="1902013368@qq.com" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <title>智汇云书签</title>
+    <title>轻笺</title>
   </head>
   <body style="padding: 0; margin: 0">
     <div id="app"></div>
